This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.

#5 Make sure changes were made before creating a new version, normalized and now also for all element types.
#1 Add ability to create a snapshot of all resources and elements during install.
#2 Added TV compatibility for 2.0.8. 

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev8      ++
++   Released on 2011-10-14   ++
++   Contributors:            ++
++   - Adam Lundrigan         ++
++++++++++++++++++++++++++++++++
Make pretty for MODX 2.2 (yes, that means it's yucky-ish in 2.1, but it's super in 2.2!)
#10 Fix bug in Google Chrome (Thanks Adam!)

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev7      ++
++   Released on 2011-11-25   ++
++++++++++++++++++++++++++++++++
Fix bug where it wouldn't create a version when no earlier versions existed.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev6      ++
++   Released on 2011-10-14   ++
++++++++++++++++++++++++++++++++
#5 Add check for Resource versions to make sure there are changes.
Use colors in the detail/compare resource display to see changes/additions/removals.
Respect manager_date_format and manager_time_format settings in drop down.
Add the mode to dropdown display of versions to compare to, and prevent error notices.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev5      ++
++   Released on 2011-10-14   ++
++++++++++++++++++++++++++++++++
Fix content_disposition display on version details panel.
Increase width of statictextfield
Prevent silly error messages when loading resource version lists.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev4      ++
++   Released on 2011-10-14   ++
++++++++++++++++++++++++++++++++
Add compare functionality for resource versions.
Add resource version details panel.
Reorder of Resource filter options for easier duplication at a later stage.

++++++++++++++++++++++++++++++++